turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:66: error: ']' expected but '(' found.
  rule = new Array[Array[Array[Int]] (2)] (2)
                                     ^